--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -126,7 +126,12 @@ layout: layouts/base.njk
         </div>  
       </div>
     </div>
-    
+  </div>
+</section>
+
+<section class="text-section">
+  <div class="center center--narrow">
+    <p><strong>NRGI’s country programs span five regions and a range of political, socioeconomic and developmental contexts. </strong>We are responsive to local circumstances and agendas, leveraging this diversity for learning and sharing lessons across our programs and with the wider resource governance field. We work in a circumscribednumber of countries because addressing complex governance challenges requires sustained, in-depth engagement.</p>
   </div>
 </section>
 
