--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -154,10 +154,14 @@ layout: layouts/base.njk
   <h1>Why NRGI</h1>
 </section>
 
-<section class="text-section shadow-section quote-section">
+<section class="text-section shadow-section">
   <div class="center center--narrow stack">
     <p>NRGI blends a targeted focus on resource-rich countries with a responsive approach to seize reform opportunities. The challenges we seek to address are large and complex, so we work in partnership to amplify and leverage the work of others. To sustain reform beyond our interventions, we identify and empower change agents inside and outside of government. We have processes for learning and adaptation, to ensure our continued relevance, responsiveness and impact.</p>
+    </div>
+</section>
 
+<section class="text-section quote-section">
+  <div class="center center--narrow stack">
     <h3 class="color:accent">What people say about NRGI</h3>
 
     <blockquote>
