--- a/src/site/_includes/base-components/connected-card.njk
+++ b/src/site/_includes/base-components/connected-card.njk
@@ -18,10 +18,10 @@
     </div>
     <footer class="stack">
       
-      {% if card.tag_label %}
+      {% if card.tag %}
       <div class="nrgi-impact-tag">
         <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
-        <p>{{ card.tag_label }}</p>
+        <p><a href="{{ card.tag.link }}">{{ card.tag.label }}</a></p>
       </div>
       {% endif %}
 
