--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -18,7 +18,7 @@ layout: layouts/base.njk
       </hgroup>
       <section>
         <p>For the one billion people living in poverty in resource-rich countries, the management of oil, gas and minerals can either improve or degrade the quality of life. The coronavirus pandemic and its devastating economic impacts present an unprecedented opportunity to address this decades-old challenge.</p>
-        <p>The Natural Resource Governance Institute supports countries to recover and to improve the lives of citizens—now and in the future.</p>
+        <p style="margin-top: var(--s1)">The Natural Resource Governance Institute supports countries to recover and to improve the lives of citizens—now and in the future.</p>
       </section>
       <a class="button button--white-color button--secondary">Learn More</a>
 
