--- a/src/site/_includes/postcss/project-components/_sections.css
+++ b/src/site/_includes/postcss/project-components/_sections.css
@@ -47,15 +47,15 @@
 .title-section--who-we-are { flex-direction: row; }
 
 .title-section--area-focus:after {
-  background-image: url(/images/area-of-focus.png), linear-gradient(to right, var(--bg-color), transparent);
+  background-image: url(/images/area-of-focus.png), linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0));
 }
 
 .title-section--where-we-work:after {
-  background-image: url(/images/where-we-work.jpg), linear-gradient(to right, var(--bg-color), transparent);
+  background-image: url(/images/where-we-work.jpg), linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0));
 }
 
 .title-section--bring-change:after {
-  background-image: url('/images/bring-change.jpg'), linear-gradient(to right, var(--bg-color), transparent);
+  background-image: url('/images/bring-change.jpg'), linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0));
 }
 
 .title-section--area-focus {
@@ -70,7 +70,7 @@
 
 .title-section--who-we-are {
   background-size: cover;
-  background-image: url('/images/nrgi-staff.png'), linear-gradient(var(--bg-color) 0%, var(--bg-color) 50%, transparent 100%); 
+  background-image: url('/images/nrgi-staff.png'); 
   min-height: 260px;
   align-items: center;
 }
