--- a/src/site/_includes/postcss/project-components/_sections.css
+++ b/src/site/_includes/postcss/project-components/_sections.css
@@ -47,15 +47,18 @@
 .title-section--who-we-are { flex-direction: row; }
 
 .title-section--area-focus:after {
-  background-image: url(/images/area-of-focus.png), linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0));
+  background-image: linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0)), url(/images/area-of-focus.png);
 }
 
 .title-section--where-we-work:after {
-  background-image: url(/images/where-we-work.jpg), linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0));
+  background-image: -webkit-linear-gradient(to right, var(--bg-color), transparent, url(/images/where-we-work.jpg);
+  background-image:    -moz-linear-gradient(to right, var(--bg-color), transparent, url(/images/where-we-work.jpg);
+  background-image:     -ms-linear-gradient(to right, var(--bg-color), transparent, url(/images/where-we-work.jpg);
+  background-image:      -o-linear-gradient(to right, var(--bg-color), transparent, url(/images/where-we-work.jpg);
 }
 
 .title-section--bring-change:after {
-  background-image: url('/images/bring-change.jpg'), linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0));
+  background-image: linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0)), url('/images/bring-change.jpg');
 }
 
 .title-section--area-focus {
