--- a/src/site/_includes/_modal-window.njk
+++ b/src/site/_includes/_modal-window.njk
@@ -12,7 +12,13 @@
       {% if card.tag %}
       <div class="nrgi-impact-tag">
         <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
-        <p><a href="{{ card.tag.link }}">{{ card.tag.label }}</a></p>
+
+        {% if card.tag.link %} 
+          <p><a target="_blank" href="{{ card.tag.link }}">{{ card.tag.label }}</a></p>
+        {% else %}
+          <p>{{ card.tag.label }}</p>
+        {% endif %}
+
       </div>
       {% endif %}
     </footer>
