--- a/src/site/_includes/base-components/connected-card.njk
+++ b/src/site/_includes/base-components/connected-card.njk
@@ -21,7 +21,7 @@
       {% if card.tag %}
       <div class="nrgi-impact-tag">
         <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
-        <p><a href="{{ card.tag.link }}">{{ card.tag.label }}</a></p>
+        <p><a target="_blank" href="{{ card.tag.link }}">{{ card.tag.label }}</a></p>
       </div>
       {% endif %}
 
