--- a/src/site/_includes/postcss/project-components/_sections.css
+++ b/src/site/_includes/postcss/project-components/_sections.css
@@ -24,7 +24,7 @@
 .title-section--who-we-are:after {
   content: "";
   background-repeat: no-repeat;
-  background-blend-mode: saturation;
+  /*background-blend-mode: saturation;*/
   width: 50%;
   position: absolute;
   right: 0;
@@ -47,18 +47,15 @@
 .title-section--who-we-are { flex-direction: row; }
 
 .title-section--area-focus:after {
-  background-image: linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0)), url(/images/area-of-focus.png);
+  background-image: linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0)), url('/images/area-of-focus.png');
 }
 
 .title-section--where-we-work:after {
-  background-image: -webkit-linear-gradient(to right, var(--bg-color), transparent), url(/images/where-we-work.jpg);
-  background-image:    -moz-linear-gradient(to right, var(--bg-color), transparent), url(/images/where-we-work.jpg);
-  background-image:     -ms-linear-gradient(to right, var(--bg-color), transparent), url(/images/where-we-work.jpg);
-  background-image:      -o-linear-gradient(to right, var(--bg-color), transparent), url(/images/where-we-work.jpg);
+  background-image: linear-gradient(to right, var(--bg-color), rgba(0,0,0,0)), url('/images/where-we-work.jpg');
 }
 
 .title-section--bring-change:after {
-  background-image: linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0)), url('/images/bring-change.jpg');
+  background-image: linear-gradient(to right, var(--bg-color), transparent), url('/images/bring-change.jpg');
 }
 
 .title-section--area-focus {
@@ -82,7 +79,8 @@
   min-height: 260px; 
   align-items: center;
 }
-.title-section--why-nrgi:after { background-image: url('/images/why-nrgi.png'), linear-gradient(to right, var(--bg-color), transparent); }
+
+.title-section--why-nrgi:after { background-image: linear-gradient(to right, var(--bg-color), transparent), url('/images/why-nrgi.png'); }
 
 .change-cards {
   .grid { 
