--- a/src/site/_includes/postcss/project-components/_sections.css
+++ b/src/site/_includes/postcss/project-components/_sections.css
@@ -22,19 +22,15 @@
 .title-section--why-nrgi:before,
 .title-section--bring-change:before {
     content: "";
-    width: 50%;
     position: absolute;
+    width: 50%;
     right: 0;
     top: 0;
     bottom: 0;
     background-size: cover;
-    flex-direction: row;
-    z-index: -2;
-
-  @media (max-width: 850px) {
-    width: 100%;
-    opacity: .4;
-  }
+    z-index: -1;
+    background-image: linear-gradient(to right, var(--bg-color), transparent);
+    @media (max-width: 850px) { width: 100%; }
 }
 
 .title-section--area-focus:after,
@@ -46,15 +42,14 @@
     right: 0;
     top: 0;
     bottom: 0;
-    width: 50.1%;
-    background-image: linear-gradient(to right, var(--bg-color), transparent);
+    width: 50%;
     background-repeat: no-repeat;
-    background-position: center left;
-    background-size: 100% 150%;
-    z-index: -1;
+    background-position: right center;
+    background-size: cover;
+    z-index: -2;
 
-  @media (max-width: 850px) {
-    display: none;
+  @media (max-width: 850px) { 
+    width: 100%;
   }
 }
 
@@ -64,18 +59,15 @@
 .title-section--who-we-are { flex-direction: row; }
 
 .title-section--area-focus:after {
-  background-image: linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0)), url(/images/area-of-focus.png);
+  background-image: url('/images/area-of-focus.png');
 }
 
 .title-section--where-we-work:after {
-  background-image: -webkit-linear-gradient(to right, var(--bg-color), transparent), url(/images/where-we-work.jpg);
-  background-image:    -moz-linear-gradient(to right, var(--bg-color), transparent), url(/images/where-we-work.jpg);
-  background-image:     -ms-linear-gradient(to right, var(--bg-color), transparent), url(/images/where-we-work.jpg);
-  background-image:      -o-linear-gradient(to right, var(--bg-color), transparent), url(/images/where-we-work.jpg);
+  background-image: url('/images/where-we-work.jpg');
 }
 
 .title-section--bring-change:after {
-  background-image: linear-gradient(to right, var(--bg-color), RGBA(255, 255, 255, 0)), url('/images/bring-change.jpg');
+  background-image: url('/images/bring-change.jpg');
 }
 
 .title-section--area-focus {
