--- a/src/site/_includes/postcss/custom-components/_base-card-structure.css
+++ b/src/site/_includes/postcss/custom-components/_base-card-structure.css
@@ -1,7 +1,7 @@
 /* Structure */
 /* It is very unlikely we will need to work on any of the styles below */
 .base-card {
-  cursor: pointer;
+  /*cursor: pointer;*/
   overflow: hidden;
 }
 
