--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -20,11 +20,11 @@ layout: layouts/base.njk
         <p>For the one billion people living in poverty in resource-rich countries, the management of oil, gas and minerals can either improve or degrade the quality of life. The coronavirus pandemic and its devastating economic impacts present an unprecedented opportunity to address this decades-old challenge.</p>
         <p style="margin-top: var(--s1)">The Natural Resource Governance Institute supports countries to recover and to improve the lives of citizens—now and in the future.</p>
       </section>
-      <a class="button button--white-color button--secondary">Learn More</a>
+      {# <a class="button button--white-color button--secondary">Learn More</a> #}
 
       <div class="nrgi-impact-tag">
         <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
-        <p>Click on these icons to learn about related achievements in NRGI’s last strategy period</p>
+        <p><a href="https://resourcegovernance.org/analysis-tools/publications/nrgi-impact-stories" target="_blank">Click on these icons to learn about related achievements in NRGI’s last strategy period</a></p>
       </div>
     </div>
   </div>
