--- a/src/site/_includes/scripts.njk
+++ b/src/site/_includes/scripts.njk
@@ -8,6 +8,7 @@
   {% include "js/collapse.js" %}
   {% include "js/tabs.js" %}
   {% include "js/a11y-dialog.js" %}
+  {% include "js/slick.js" %}
 
   {# core functions #}
   {% include "js/core.js" %}
