Adjust New Mission Section

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -66,6 +66,7 @@
 @import 'project-components/_modal-window.css';
 /*@import 'project-components/_scrollbar.css';*/
 @import 'project-components/_project-variables.css';
+@import 'project-components/_mission-section.css';
 
 /* Custom Components */
 @import '_custom-component.css';
