--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -32,15 +32,18 @@ layout: layouts/base.njk
 
 <section class="mission-section text-section">
   <div class="center">
-    <p><strong>We are an independent, global policy analysis and advocacy institute, working with partners to ensure that:</strong></p>
-    <ul>
-      <li>
-        <p>Countries rich in oil, gas and minerals achieve sustainable, inclusive development.</p>
-      </li>
-      <li>
-        <p>People receive lasting benefits—and experience reduced harms—from the extractive sector.</p>
-      </li>
-    </ul>
+    <h1 class="mission-section__title">OUR MISSION</h1>
+    <h3><strong>We are an independent, global policy analysis and advocacy institute, working with partners to ensure that:</strong></h3>
+    <div class="mission-section__missions-container">
+    <div class="mission-section__missions mission-section__missions--oil">
+    <div class="mission-section__icon"></div>
+      <p>Countries rich in oil, gas and minerals achieve sustainable, inclusive development.</p>
+    </div>
+    <div class="mission-section__missions mission-section__missions--benefits">
+    <div class="mission-section__icon"></div>
+      <p>People receive lasting benefits—and experience reduced harms—from the extractive sector.</p>
+    </div>
+    </div>
   </div>
 </section>
 
