Add Social Media Links

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -185,12 +185,11 @@ layout: layouts/base.njk
     <div>
       <form class="subscribe-form" action=""><input type="text" placeholder="Sign up to receive updates"><input type="submit" value="Subscribe"></form>
       <div class="social-media">
-        <a href="#">{% include 'icons/facebook.njk' %}</a>
-        <a href="#">{% include 'icons/linkedin.njk' %}</a>
-        <a href="#">{% include 'icons/twitter.njk' %}</a>
-        <a href="#">{% include 'icons/youtube.njk' %}</a>
+        <a href="https://www.facebook.com/OpenNorth.NordOuvert" target="_blank">{% include 'icons/facebook.njk' %}</a>
+        <a href="https://www.linkedin.com/company/open-north/" target="_blank">{% include 'icons/linkedin.njk' %}</a>
+        <a href="https://twitter.com/opennorth" target="_blank">{% include 'icons/twitter.njk' %}</a>
       </div>
-      <a href="#" class="color:white">resourcegovernance.org</a>
+      <a href="https://resourcegovernance.org/" target="_blank" class="color:white">resourcegovernance.org</a>
     </div>
   </div>
 </footer>
