--- a/src/site/_includes/postcss/project-components/_footer.css
+++ b/src/site/_includes/postcss/project-components/_footer.css
@@ -16,4 +16,13 @@
   }
 
   a { text-decoration: none; }
+
+  .footer__subscribe-button {
+    background-color: var(--accent-color); 
+    text-transform: uppercase;
+    font-size: .8rem;
+    font-weight: 500;
+    color: white;
+    letter-spacing: .4px;
+  }
 }
