quick edits before deliver

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -183,20 +183,20 @@ layout: layouts/base.njk
 <footer class="footer base-section">
   <div class="center center--wrapper">
     <div>
-      <a href="https://www.opennorth.ca/newsletter/" target="_blank">
+      <a href="https://us2.list-manage.com/subscribe?u=586ab656ca1263b8776b1f081&id=81af06e868" target="_blank">
         <button class="footer__subscribe-button">Subscribe</button>
       </a>
       <div class="social-media">
-        <a href="https://www.facebook.com/OpenNorth.NordOuvert" target="_blank">{% include 'icons/facebook.njk' %}</a>
-        <a href="https://www.linkedin.com/company/open-north/" target="_blank">{% include 'icons/linkedin.njk' %}</a>
-        <a href="https://twitter.com/opennorth" target="_blank">{% include 'icons/twitter.njk' %}</a>
+        <a href="https://www.facebook.com/nrginstitute" target="_blank">{% include 'icons/facebook.njk' %}</a>
+        <a href="https://www.linkedin.com/company/natural-resource-governance-institute/" target="_blank">{% include 'icons/linkedin.njk' %}</a>
+        <a href="https://twitter.com/NRGInstitute" target="_blank">{% include 'icons/twitter.njk' %}</a>
       </div>
       <a href="https://resourcegovernance.org/" target="_blank" class="color:white">resourcegovernance.org</a>
     </div>
   </div>
 </footer>
 <div class="by-line">
-  <a href="https://ccm.design">by ccm.design</a>
+  <a href="https://ccm.design" target="_blank">by ccm.design</a>
 </div>
 
 {% for card in connectedCards %}
