--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -6,7 +6,7 @@ layout: layouts/base.njk
   <div class="hero-section__top-bar">
     <div class="center center--wrapper">
       <img class="hero-section__image" src="/images/nrgi-logo-white.svg" alt="Natural Resource Governance Institute">
-      <a class="hero-section__download-btn button button--primary button--accent-color">Download Full Strategy</a>
+      <a class="hero-section__download-btn button button--primary button--accent-color" href="https://resourcegovernance.org/sites/default/files/documents/nrgi-strategy-2020-2025.pdf" target="_blank">Download Full Strategy</a>
     </div>
   </div>
 
@@ -65,7 +65,7 @@ layout: layouts/base.njk
 <section class="title-section--area-focus title-section">
   <div class="center stack">
     <h1>Our expertise</h1>
-    <p>NRGI focuses on governance reforms most critical to economic ad environmental sustainability. We work to ensure that citizens can get a good deal for their countries’ 
+    <p>NRGI focuses on governance reforms most critical to economic and environmental sustainability. We work to ensure that citizens can get a good deal for their countries’ 
     resources and that authorities manage revenue effectively and accountably. We will help countries to navigate the energy transition, and to eliminate capture and corruption. Learn more about our areas of focus:</p>
   </div>
 </section>
@@ -184,7 +184,7 @@ layout: layouts/base.njk
 
 <footer class="footer base-section">
   <div class="center center--wrapper">
-    <div>
+    <div class="footer__content">
       <a href="https://us2.list-manage.com/subscribe?u=586ab656ca1263b8776b1f081&id=81af06e868" target="_blank">
         <button class="footer__subscribe-button">Subscribe</button>
       </a>
