WIP - open graph, favicon and analytics

--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -11,6 +11,42 @@
     <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <title>{{ title }}</title>
+
+    <link rel="canonical" href="{{ currentUrl }}" />
+
+    <meta property="og:site_name" content="NRGI Strategy 2020-2025" />
+    <meta property="og:title" content="Toward a resilient and sustainable future" />
+    <meta property="og:type" content="website" />
+
+    <meta property="og:url" content="" />
+    
+    <meta property="og:description" content="For the one billion people living in poverty in resource-rich countries, the management of oil, gas and minerals can either improve or degrade the quality of life. The accelerating climate crisis and the devastating economic impacts of the coronavirus pandemic present an unprecedented opportunity to address this decades-old challenge. The Natural Resource Governance Institute supports countries to improve the lives of citizens - now and in the future." />
+    
+    <meta name="description" content="For the one billion people living in poverty in resource-rich countries, the management of oil, gas and minerals can either improve or degrade the quality of life. The accelerating climate crisis and the devastating economic impacts of the coronavirus pandemic present an unprecedented opportunity to address this decades-old challenge. The Natural Resource Governance Institute supports countries to improve the lives of citizens - now and in the future." />
+    
+    <meta property="og:image" content="/images/hero-image.jpg" />
+    
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TTPGJHX');</script>
+    <!-- End Google Tag Manager -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-XXXXXXXXX-X');
+    </script>
+
+    <link rel="icon" href="https://resourcegovernance.org/sites/default/files/favicon.ico" type="image/svg+xml" />
+
   </head>
   <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
 
