--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -5,7 +5,7 @@ layout: layouts/base.njk
 <header class="hero-section title-section">
   <div class="hero-section__top-bar">
     <div class="center center--wrapper">
-      <img class="hero-section__image" src="/images/nrgi-logo-white.svg" alt="Natural Resource Governance Institute">
+      <a href="https://resourcegovernance.org/" target="_blank"><img class="hero-section__image" src="/images/nrgi-logo-white.svg" alt="Natural Resource Governance Institute"></a>
       <a class="hero-section__download-btn button button--primary button--accent-color" href="https://resourcegovernance.org/sites/default/files/documents/nrgi-strategy-2020-2025.pdf" target="_blank">Download Full Strategy</a>
     </div>
   </div>
